src/frontend/src/components/dropdown/dropdown.less
.dropdown {
  display: inline-block;
  position: relative;
  text-align: left;
  color: @s2-white;
  width: auto;
  position: relative;
  border-bottom: @base-border;
  padding: 0 30px @m-stack 0;
  position: relative;
  font-size: @l-base-font-size;

  select {
    color: @s2-black;
    opacity: 0;
    display: block;
    cursor: pointer;
    position: absolute;
    top: 0;
    left: 0;
    min-width: calc(100% + 21px); // inherit width from .dropdown to fill the space

    &:focus, &:active {
      outline: none;
      border: none;
    }

    &:hover {
      color: @s2-black-hover;
    }
  }
  
  &-icon {
    position: absolute;
    right: 3px;
    bottom: 19px;
    display: block;
    width: 8px;
    height: 13px;
    pointer-events: none;
    transform: rotate(270deg);
  }
}

